--- a/style.css
+++ b/style.css
@@ -204,3 +204,53 @@ li a:hover, .card-link a:hover, .card-author a:hover {
   color: #6494AA;
   font-weight: 400;
 }
+
+@media screen and (max-width: 500px) {
+
+  .card-container {
+    display: block;
+    width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .card {
+    width: 100vw;
+    margin: 0;
+  }
+
+  .hd-title {
+    padding-top: 1rem;
+  }
+
+  .hd-title a {
+    font-size: 2.5rem;
+
+  }
+
+  .article-body {
+    width: 100vw;
+  }
+
+  .article-category {
+    padding-left: .5rem;
+    padding-right: .5rem;
+  }
+
+  .article-author {
+    font-size: .8rem;
+  }
+
+  .article-title {
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .article-content {
+    padding-left: .5rem;
+    padding-right: .5rem;
+  }
+
+}
